# agh-2021-pp

./: CMakeLists.txt  README.md
2021-03-05/: zad1.c  zad2.c  zad3.c  zad4.c  zad5.c  zad6.c  zad7.c  zad8.c
2021-03-12/: zad1.c  zad2.c  zad3.c
2021-03-26/: zad1.c  zad2.c  zad3.c
2021-04-09/: zad1.c  zad2.c  zad3.c
2021-04-16/: zad1.c  zad2.c
2021-04-23/: zad2.c
